Fix tile sometimes overlaps tile header

--- a/src/components/Tile.css
+++ b/src/components/Tile.css
@@ -16,11 +16,7 @@
   box-sizing: border-box;
   padding: 10px;
   padding-bottom: 0px;
-  /* height: 8%; */
-  flex-basis: 8%;
-  flex-shrink: 0;
-  flex-grow: 0;
-  z-index: 1;
+  flex: 1;
   background-color: #fff;
   font-size: 40px;
   display: flex;
@@ -48,16 +44,9 @@
 .TileBody {
   position: relative;
   width: 100%;
-  
-  height: 92%;
-  /* 
-  Those flex properties do somehow not work for flex items containing images
-  */
-  /* flex: 1 1 92%; */
-  
+  flex: 10;
   padding: 10px;
   box-sizing: border-box;
-  
   display: flex;
   justify-content: center;
   align-items: center;
